# AutoFE

./: .gitignore  main.py  pyproject.toml  resultados.txt
config/: default_config.yaml
src/: AutoFE_model.py  best_model_rust.pth  best_model_rust_regression.pth  brazil_to_parana_weather_data.py  data_loader.py  engine.py  generic_code.py  join_dataset.py  make_dataset.py  tsfresh_model.py  unifying_weather_data.py
